Changed the home page of the Users controller so that it doesn't retrieve the user information (this was just taking too long since I have about > 8k users in my test domain). I also changed the top navigation bar so that it's width is set to 95% as oppposed to a certain width. this was causing an issue with the look in the Users section where the left nav bar was not aligned with the navbar brand.

--- a/ADWeb/Content/css/custom.css
+++ b/ADWeb/Content/css/custom.css
@@ -9,6 +9,10 @@ body {
   font-size: 14px;
 }
 
+.container {
+	width: 95%;
+}
+
 #footer {
   position: absolute;
   bottom: 0;
