--- a/ADWeb/Content/css/users.css
+++ b/ADWeb/Content/css/users.css
@@ -2,6 +2,10 @@
 	padding-top: 30px;
 }
 
+.container {
+	width: 100%;
+}
+
 /* sidebar styles */
 .sidebar {
   display: none;
@@ -46,7 +50,7 @@
 }
 @media (min-width: 768px) {
   .main {
-    padding-right: 40px;
+    /*padding-right: 40px;*/
     padding-left: 40px;
   }
 }
